# plexy

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker-publish.yml  test.yml
plexy/: __init__.py  __main__.py  api.py  cli.py  exceptions.py  utils.py
scripts/: test.sh
tests/: test_utils.py
