[tool.poetry]
name = "plexy"
version = "0.1.5"
description = "Your Plex, your way"
authors = [
    "Rato"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ratoaq2/plexy"
keywords = [
    "video",
    "plex",
    "audio",
    "subtitles",
    "preferences",
    "dubbed",
    "subbed",
    "original",
    "language",
    "foreign",
    "movie",
    "episode",
    "tv",
    "track",
    "shows",
    "series",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

[tool.poetry.dependencies]
python = "^3.9.0"
PlexAPI = "^4.12.1"
click = "^8.1.3"
babelfish = "^0.6.0"
trakit = "^0.2.2"
appdirs = "^1.4.4"
pyyaml = {version = "^6.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
flake8-import-order = "^0.18.2"
mypy = "^1.1.1"
types-appdirs = "^1.4.3.1"
types-pyyaml = "^6.0.12.2"
pytest = "^8.2.2"
mockito = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
